components/header/header.css
body {
    margin: 0;
}

header {
    border-bottom: 1px solid black;
    display: grid;
    grid-template-columns: repeat(8, 1fr);
    grid-template-rows: 1fr;
}

.h_class {
    cursor: pointer;
    font-size: 3vh;

    display: flex;
    justify-content: center;
    align-items: center;
    box-sizing: border-box;
}

nav {
    display: flex;
    flex-direction: column;
    margin: 50px;
}

.rubrik {
    font-weight: bolder;
    grid-column: 1;
}

.all {
    grid-column: 3;
}

.boots {
    grid-column: 4;
}

.sneakers {
    grid-column: 5;
}

.slippers {
    grid-column: 6;
}

.about {
    grid-column: 8;
}

.shoe_rubrik {
    font-size: 50px;
    margin: 10px 0;
}

.info_shoe {
    margin: 30px 0;
}

